Adjust code for OpenJDK 8